Updated CSS, avoid invisible text during font loading

--- a/system/extensions/edit.css
+++ b/system/extensions/edit.css
@@ -452,6 +452,7 @@
     font-family: "Edit";
     font-weight: normal;
     font-style: normal;
+    font-display: block;
     src: url("edit.woff") format("woff");
 }
 .yellow-icon {
